--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -22,7 +22,7 @@
                     <a href="/" class="nav-link" data-page="home">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/team-signup" class="nav-link" data-page="team-signup">Team Signup</a>
+                    <a href="/teams-registration" class="nav-link" data-page="teams-registration">Team Registration</a>
                 </li>
                 <li class="nav-item">
                     <a href="/vendors" class="nav-link" data-page="vendors">Vendors</a>
