--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -24,9 +24,9 @@
                 <li class="nav-item">
                     <a href="/teams-registration" class="nav-link" data-page="teams-registration">Team Registration</a>
                 </li>
-                <li class="nav-item">
-                    <a href="/vendors" class="nav-link" data-page="vendors">Vendors</a>
-                </li>
+                <!-- <li class="nav-item"> -->
+                    <!-- <a href="/vendors" class="nav-link" data-page="vendors">Vendors</a> -->
+                <!-- </li> -->
                 <li class="nav-item">
                     <a href="/sponsorship" class="nav-link" data-page="sponsorship">Sponsorship</a>
                 </li>
