updated phone number and other small details

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -26,21 +26,7 @@
                     <div class="contact-icon">📱</div>
                     <div class="contact-content">
                         <h3>Phone</h3>
-                        <a href="tel:+1234567890">(123) 456-7890</a>
-                    </div>
-                </div>
-                <div class="contact-item">
-                    <div class="contact-icon">📍</div>
-                    <div class="contact-content">
-                        <h3>Address</h3>
-                        <p>123 Community Center Drive<br>Noblesville, IN 46060</p>
-                    </div>
-                </div>
-                <div class="contact-item">
-                    <div class="contact-icon">🕒</div>
-                    <div class="contact-content">
-                        <h3>Office Hours</h3>
-                        <p>Monday - Friday: 9:00 AM - 6:00 PM<br>Saturday: 10:00 AM - 4:00 PM<br>Sunday: Closed</p>
+                        <a href="tel:+13175377245">+1(317) 537-7245</a>
                     </div>
                 </div>
             </div>
