--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -56,15 +56,11 @@
                 <div class="footer-contact">
                     <p class="contact-item">
                         <span class="contact-label">Email:</span>
-                        <a href="mailto:info@tournament2025.com">info@tournament2025.com</a>
+                        <a href="mailto:info@alhudaspark.org">info@alhudaspark.org</a>
                     </p>
                     <p class="contact-item">
                         <span class="contact-label">Phone:</span>
-                        <a href="tel:+13175551234">(317) 555-1234</a>
-                    </p>
-                    <p class="contact-item">
-                        <span class="contact-label">Location:</span>
-                        <span>Indianapolis, IN</span>
+                        <a href="tel:+13175377245">(317) 537-7245</a>
                     </p>
                 </div>
             </div>
