--- a/views/sponsorship.ejs
+++ b/views/sponsorship.ejs
@@ -251,7 +251,7 @@
         </div>
         <div class="modal-body">
             <div class="error-icon">⚠️</div>
-            <h4>Something went wrong</h4>
+            <h4>Error</h4>
             <p id="errorModalText"></p>
         </div>
         <div class="modal-footer">
